# zksync-python

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  setup.cfg
.github/workflows/: ci.yml
tests/: test_contract.py  test_library.py  test_numeric_utils.py  test_signer.py  test_wallet.py
zksync/: lib.py  signer.py  types.py
zksync_sdk/: __init__.py  contract_utils.py  ethereum_provider.py  lib.py  network.py  serialize_utils.py  serializers.py  signer.py  types.py  wallet.py  zksync.py  zksync_provider.py  zksync_signer.py  zksyncprovider.py
zksync_sdk/contract_abi/: ZkSync.json
zksync_sdk/ethereum_signer/: __init__.py  interface.py  web3.py
zksync_sdk/providers/: __init__.py  http.py
zksync_sdk/transport/: __init__.py  http.py
zksync_sdk/types/: __init__.py  auth_types.py  responses.py  signatures.py  transactions.py
zksync_sdk/zksync_provider/: __init__.py  batch_builder.py  error.py  interface.py  transaction.py  types.py  v01.py
