[metadata]
name = zksync_sdk
description = SDK for using zksync
long_description = file: README.rst
author = MatterLabs
url = https://zksync.io
license = MIT

[options]
packages =
	zksync_sdk
install_requires =
	idna < 3
	web3 >= 5.16
	httpx == 0.16
	pydantic >= 1.7
	mypy >= 0.8

setup_requires =
	setuptools_scm>=3.5.0

[tox:tox]
envlist = py{38,39},mypy

[testenv]
deps = coverage
extras = test
setenv = ZK_SYNC_LIBRARY_PATH=/lib/zks-crypto-linux-x64.so
commands = coverage run -m unittest
