[metadata]
name = zksync_sdk
description = SDK for using zksync
long_description = file: README.rst
author = MatterLabs
url = https://zksync.io
license = MIT

[options]
packages = find:
install_requires =
	idna < 3
	web3 >= 5.16
	httpx >= 0.16
	pydantic >= 1.7
python_requires = >=3.8
setup_requires =
	setuptools_scm>=3.5.0

[options.extras_require]
test =
    mypy >= 0.8

[options.packages.find]
include =
   	zksync_sdk
    zksync_sdk.*

[options.package_data]
zksync_sdk =
    py.typed
zksync_sdk.contract_abi =
    IERC20.json
    ZkSync.json

[tox:tox]
envlist = py{38,39},mypy

[testenv:py{38,39}]
deps = coverage
setenv = ZK_SYNC_LIBRARY_PATH=/lib/zks-crypto-linux-x64.so
commands = coverage run -m unittest

[testenv:mypy]
extras = test
commands = mypy .

[mypy]
show_error_codes = True
no_implicit_optional = True

[mypy-setuptools.*]
ignore_missing_imports = True

[mypy-eth_account.*]
ignore_missing_imports = True
